# reporepo

./: docker-compose.yml  dockerfile  pyproject.toml
data/db/base/1/: 2619  2696  2840  2841  pg_internal.init
data/db/base/16384/: 2619
data/db/base/5/: pg_internal.init
data/db/global/: 1260  1262  2671  pg_control  pg_internal.init
data/db/pg_stat/: pgstat.stat
postgres_data/base/1/: pg_internal.init
postgres_data/global/: 1260  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
